--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -15,9 +15,11 @@
             <div class="form-group">
               <input type="password" name="password" placeholder="Password" class="form-control">
             </div>
-            <button class="btn btn-primary btn-block">
+            {{!-- <button class="btn btn-primary btn-block">
               SingIn
-            </button>
+            </button> --}}
+            <a href="/auth/google" class="btn btn-primary btn-block">Iniciar sesión con google</a>
+          
           </form>
 
         </div>
