--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -13,13 +13,17 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-          Acciones
+            Acciones
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/links"></a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/profile/create_users">Crear usuarios</a>
+            <a class="dropdown-item" href="/profile/change_password">Forzar contraseña</a>
+            <a class="dropdown-item" href="/profile/create_drive_units">Crear unidades compartidas</a>
+
           </div>
+
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/profile">{{{user.profile.displayName}}}</a>
