--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -5,9 +5,9 @@
                 <div class="card-body">
                     <h3>Welcome {{user.fullname}}</h3>
                     <h4>{{user.username}}</h4>
-                    <a href="/links" class="btn btn-primary m-4">
+                    {{!-- <a href="/links" class="btn btn-primary m-4">
                         Save your Links    
-                    </a>
+                    </a> --}}
                 </div>
             </div>
         </div>
