--- a/src/views/apis/change_password/all.hbs
+++ b/src/views/apis/change_password/all.hbs
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="container mx-auto col-md-5 mt-5">
         <div class="card text-center mx-auto mt-5">
-            <div class="card-header">
-                <h1>Forzar el cambiod de contraseña</h1>
+            <div class="card-header classic">
+                <h1>Forzar el cambio de contraseña</h1>
             </div>
             <div class="card-body">
                 <form action="/profile/change_password" class="" method="POST" class="form-control">
@@ -28,7 +28,7 @@
                         <input type="text" class="form-control" value={{this}}>
                         <div class="input-group-append">
                             <span class="input-group-text"><a href="/profile/change_password/{{this}}">forzar</a></span>
-                            <span class="input-group-text">0.00</span>
+                            {{!-- <span class="input-group-text">0.00</span> --}}
                         </div>
                     </div>
                     {{/each}}
