--- a/src/views/apis/change_password/main.hbs
+++ b/src/views/apis/change_password/main.hbs
@@ -1,18 +1,19 @@
 <div class="row">
-    <div class="container mx-auto col-md-5 mt-5">
+    <div class="container mx-auto col-md-4 mt-5">
         <div class="card text-center mx-auto mt-5">
             <div class="card-header">
-                <h1>Forzar el cambiod de contraseña</h1>
+                <h1>Forzar el cambio de contraseña</h1>
             </div>
             <div class="card-body">
-                <form action="/profile/change_password" class="" method="POST" class="form-control">
-                    <input type="text" name="domain" class="form-control mb-2" placeholder="Introduce el dominio">
-                    <input type="text" name="dias" class="form-control mb-2" placeholder="Introduce los dias">
-                    <select name="eleccion" class="form-control mb-2">
+                <form action="/profile/change_password" class="" method="POST" >
+                    <input type="text" name="domain" class="form-control mb-2" placeholder="Introduce el dominio" required>
+                    <input type="text" name="dias" class="form-control mb-2" placeholder="Introduce los dias" required>
+                    <select name="eleccion" class="form-control mb-2" required>
+                        <option value="">--Selecciona una opcion--</option>
                         <option value="all">Forzar a todos los usuarios de la organización</option>
                         <option value="user">Seleccionar usuarios</option>
                     </select>
-                    <input type="submit" class="form-control mb-2">
+                    <button type="submit" class="btn btn-primary">Enviar<i class="far fa-paper-plane"></i></button>
                 </form>
             </div>
         </div>
