--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -13,6 +13,9 @@
     crossorigin="anonymous">
   {{!-- STYLES --}}
   <link rel="stylesheet" href="/css/styles.css">
+  {{!-- NOTO SANS JP --}}`
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
