--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <title>Notes App</title>
   {{!-- GOOGLE FONTS --}}
@@ -14,7 +15,10 @@
   {{!-- STYLES --}}
   <link rel="stylesheet" href="/css/styles.css">
   {{!-- NOTO SANS JP --}}`
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
+  {{!-- JQUERY  --}}
+  <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
+  {{!-- Funciones para las paginas principales --}}
   
 </head>
 
@@ -32,3 +36,8 @@
     crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+  <script src="/js/resources/jquery/jquery.main.js"></script>
