--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -3,8 +3,7 @@ body {
     padding: 0;
     background:url('../img/bg.jpg');
     background-size: cover;
-    font-family: 'Noto Sans JP', sans-serif;
-        /* overflow: hidden; */
+    font-family: 'Roboto', sans-serif;        /* overflow: hidden; */
 }
 
 
@@ -36,7 +35,7 @@ body {
 }
 
 .nav-link {
-    color: #fff !important;
+    color:black !important;
 }
 
 .masthead {
@@ -65,4 +64,114 @@ body {
     .masthead h1 {
       font-size: 5.5rem;
     }
+  }
+
+
+
+
+
+
+
+  /* Loader */
+
+  .loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('images/pageLoader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
+
+.logo{
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+}
+
+
+
+
+/*
+*
+* ==========================================
+* CUSTOM UTIL CLASSES
+* ==========================================
+*
+*/
+
+.vertical-nav {
+    min-width: 17rem;
+    width: 17rem;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.4s;
+  }
+  
+  .page-content {
+    width: calc(100% - 17rem);
+    margin-left: 17rem;
+    transition: all 0.4s;
+  }
+  
+  /* for toggle behavior */
+  
+  #sidebar.active {
+    margin-left: -17rem;
+  }
+  
+  #content.active {
+    width: 100%;
+    margin: 0;
+  }
+  
+  @media (max-width: 768px) {
+    #sidebar {
+      margin-left: -17rem;
+    }
+    #sidebar.active {
+      margin-left: 0;
+    }
+    #content {
+      width: 100%;
+      margin: 0;
+    }
+    #content.active {
+      margin-left: 17rem;
+      width: calc(100% - 17rem);
+    }
+  }
+  
+  /*
+  *
+  * ==========================================
+  * FOR DEMO PURPOSE
+  * ==========================================
+  *
+  */
+  
+  body {
+    background: url('../img/bg.jpg');
+    background-size:cover;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+  }
+  
+  .separator {
+    margin: 3rem 0;
+    border-bottom: 1px dashed #fff;
+  }
+  
+  .text-uppercase {
+    letter-spacing: 0.1em;
+  }
+  
+  .text-gray {
+    color: rgb(32, 32, 32);
   }
