--- a/src/views/apis/create_users/main.hbs
+++ b/src/views/apis/create_users/main.hbs
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row rowUsers">
     <div class="container mx-auto col-md-5 mt-5">
         <div class="card text-center mx-auto mt-5">
             <div class="card-header">
@@ -7,18 +7,15 @@
             <div class="card-body">
 
                 <form action="/profile/create_users" class="" method="POST" class="form-control">
-                    <input type="text" name="sheetId" class="form-control mb-2" placeholder="Introduce el id de la sheet...">
-                    <p class="p-2"> o Crear manualmente</p>
-                    <input type="text" name="email" class="form-control mb-2" placeholder="Introduce el email del usuario">
-                    <input type="text" name="nombre" class="form-control mb-2" placeholder="Introduce el nombre">
-                    <input type="text" name="apellidos" class="form-control mb-2" placeholder="Introduce los apellidos">
-                    <input type="text" name="telefono" class="form-control mb-2" placeholder="Introduce el telefono">
-                    <input type="text" name="pass" class="form-control mb-2" placeholder="Introduce la pass">
-                    <input type="text" name="alias" class="form-control mb-2" placeholder="Introduce los alias separados por (,)">
-                    {{!-- email,nombre,apellidos,telefono,pass--}}
-
-
-                    <input type="submit" class="form-control mb-2">
+                    <a href="https://admin.google.com/ac/users">Ver usuarios</a>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id=""><i class="fas fa-eye" style="cursor:pointer;"></i></span>
+                        </div>
+                        <input type="text" id="sheetId" name="sheetId" class="form-control" placeholder="Introduce el id de la sheet...">
+                    </div>
+                    <input type="submit" class="form-control mt-3">
+                    
                 </form>
 
             </div>
