--- a/src/views/apis/create_users/main.hbs
+++ b/src/views/apis/create_users/main.hbs
@@ -9,13 +9,13 @@
                 <form action="/profile/create_users" class="" method="POST" class="form-control">
                     <a href="https://admin.google.com/ac/users">Ver usuarios</a>
                     <div class="input-group">
+
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id=""><i class="fas fa-eye" style="cursor:pointer;"></i></span>
+                            <span class="input-group-text" id="seeSheetId"><i class="fas fa-eye" style="cursor:pointer;"></i></span>
                         </div>
-                        <input type="text" id="sheetId" name="sheetId" class="form-control" placeholder="Introduce el id de la sheet...">
+                        <input type="text" id="sheetId" name="sheetId" class="form-control" placeholder="Introduce el id de la sheet..." required>
                     </div>
                     <input type="submit" class="form-control mt-3">
-                    
                 </form>
 
             </div>
