--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -12,13 +12,20 @@
     </div>
   </div>
 
+
   <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Main</p>
 
   <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
-      <a href="#" class="nav-link text-dark bg-light ">
+      <a href="/profile" class="nav-link text-dark bg-light ">
         <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>
         Home
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="/profile/seeUsers" class="nav-link text-dark">
+        <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>
+        Ver usuarios en panel
       </a>
     </li>
   
