--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -13,19 +13,45 @@
                         <a href="/profile/create_users" class="form-control nav-link text-dark bg-light">Crear usuarios</a>
                     </div>
 
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                        </div>
+                        <a href="/profile/create_drive_units" class="form-control nav-link text-dark bg-light">Crear
+                            unidades compartidas</a>
+                    </div>
+
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                        </div>
+                        <a href="/profile/dobles_verificaciones" class="form-control nav-link text-dark bg-light">Inscripción en Verificación en dos pasos 2SV</a>
+                    </div>
+
+                    
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                        </div>
+                        <a href="/profile/create_groups" class="form-control nav-link text-dark bg-light">Crear grupos</a>
+                    </div>
+
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                        </div>
+                        <a href="/profile/change_password" class="form-control nav-link text-dark bg-light">Cambio
+                            de contraseña</a>
+                    </div>
+
+                    {{!--  --}}
                      <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">@</span>
                         </div>
-                        <a href="/profile/create_drive_units" class="form-control nav-link text-dark bg-light">Crear unidades compartidas</a>
-                    </div>
-
-
-                       <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">@</span>
-                        </div>
-                        <a href="/profile/dobles_verificaciones" class="form-control nav-link text-dark bg-light">Forzado de contraseña</a>
+                        <a href="/profile/mail_merge_sheet" class="form-control nav-link text-dark bg-light">Personalizar mail merge</a>
                     </div>
                 </div>
             </div>
