--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -175,3 +175,22 @@ body {
   .text-gray {
     color: rgb(32, 32, 32);
   }
+
+
+
+
+
+
+
+
+
+
+
+
+  .error{
+     background: red;
+  }
+
+  .success{
+    background:green;
+  }
