--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -19,6 +19,7 @@
   {{!-- JQUERY  --}}
   <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
   {{!-- Funciones para las paginas principales --}}
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   
 </head>
 
