--- a/src/views/apis/change_password/all.hbs
+++ b/src/views/apis/change_password/all.hbs
@@ -5,7 +5,7 @@
                 <h1>Forzar el cambio de contraseña</h1>
             </div>
             <div class="card-body">
-                <form action="/profile/change_password" class="" method="POST" class="form-control">
+                <form action="/profile/change_password/send" class="" method="POST" class="form-control">
                     <input type="text" name="domain" class="form-control mb-2" placeholder="Introduce el dominio" value={{domain}}>
                     {{#if restantes}}
                     <p>Usuarios que no han cambiado nunca aún la contraseña</p>
@@ -13,8 +13,11 @@
                     <div class="input-group mb-2">
                         <input type="text" class="form-control" value={{this}}>
                         <div class="input-group-append">
-                            <span class="input-group-text"><a href="/profile/change_password/{{this}}">forzar</a></span>
-                            <span class="input-group-text">0.00</span>
+                            <input type="checkbox" class="input-group-text" name="user" value={{this}} />
+
+                            {{!-- <span class="input-group-text"><a href="/profile/change_password/{{this}}">forzar</a></span>
+                            --}}
+                            {{!-- <span class="input-group-text">0.00</span> --}}
                         </div>
                     </div>
 
@@ -24,16 +27,20 @@
                     {{#if recientes}}
                     <p>Usuarios que llevan {{dias}} días sin cambiar la contraseña</p>
                     {{#each recientes}}
-                     <div class="input-group mb-2">
+                    <div class="input-group mb-2">
                         <input type="text" class="form-control" value={{this}}>
+
                         <div class="input-group-append">
-                            <span class="input-group-text"><a href="/profile/change_password/{{this}}">forzar</a></span>
+                            <input type="checkbox" class="input-group-text" name="user" value={{this}} />
+
+                            {{!-- <span class="input-group-text"><a href="/profile/change_password/{{this}}">forzar</a></span>
+                            --}}
                             {{!-- <span class="input-group-text">0.00</span> --}}
                         </div>
                     </div>
                     {{/each}}
                     {{/if}}
-
+                    <input type="submit" value="Forzar contraseñas">
                 </form>
             </div>
         </div>
