--- a/src/views/apis/create_users/main.hbs
+++ b/src/views/apis/create_users/main.hbs
@@ -15,6 +15,15 @@
                         </div>
                         <input type="text" id="sheetId" name="sheetId" class="form-control" placeholder="Introduce el id de la sheet..." required>
                     </div>
+
+                  <br>
+                    <div class="input-group">
+
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="seeSheetId"><i class="fas fa-eye" style="cursor:pointer;"></i></span>
+                        </div>
+                        <input type="text" id="domain" name="domain" class="form-control" placeholder="Introduce el dominio" required>
+                    </div>
                     <br>
                         <a href="/profile/create_users/downloadLogs">Descargar logs</a>
                     <input type="submit" class="form-control mt-3">
