--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background:url('../img/bg.jpg');
+    background:url('../img/gsuitepatner.jpg');
     background-size: cover;
     font-family: 'Roboto', sans-serif;        /* overflow: hidden; */
 }
