--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -3,19 +3,18 @@
         <div class="col-md-8 mx-auto">
             <div class="card text-center">
                 <div class="card-header bg-light">
-                    <h2>Selecciona lo que quieres hacer</h2>
                 </div>
                 <div class="card-body">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <span class="input-group-text" id="basic-addon1"><i class="far fa-user"></i></span>
                         </div>
                         <a href="/profile/create_users" class="form-control nav-link text-dark bg-light">Crear usuarios</a>
                     </div>
 
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <span class="input-group-text" id="basic-addon1"><i class="fab fa-google-drive"></i></span>
                         </div>
                         <a href="/profile/create_drive_units" class="form-control nav-link text-dark bg-light">Crear
                             unidades compartidas</a>
@@ -24,7 +23,7 @@
 
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-user-lock"></i></span>
                         </div>
                         <a href="/profile/dobles_verificaciones" class="form-control nav-link text-dark bg-light">Inscripción en Verificación en dos pasos 2SV</a>
                     </div>
@@ -40,7 +39,7 @@
 
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
                         </div>
                         <a href="/profile/change_password" class="form-control nav-link text-dark bg-light">Cambio
                             de contraseña</a>
@@ -49,7 +48,7 @@
                     {{!--  --}}
                      <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-file-excel"></i></span>
                         </div>
                         <a href="/profile/mail_merge_sheet" class="form-control nav-link text-dark bg-light">Personalizar mail merge</a>
                     </div>
