--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -156,7 +156,7 @@ body {
   */
   
   body {
-    background: url('../img/bg.jpg');
+    background: url('../img/gsuitepatner.jpg');
     background-size:cover;
     min-height: 100vh;
     background-repeat: no-repeat;
